--- a/popup.html
+++ b/popup.html
@@ -1,191 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="fa">
   <head>
     <title>Popup</title>
-    <style>
-      body {
-        width: 320px;
-        font-family: Arial, sans-serif;
-        padding: 0px;
-      }
-
-      .page {
-        margin: 0px;
-        width: 100%;
-        height: 100%;
-        max-height: 100%;
-        display: flex;
-        flex-direction: column;
-        gap: 6px;
-        padding: 6px;
-        border-radius: 12px;
-        box-sizing: border-box;
-        overflow: auto;
-      }
-
-      h2 {
-        font-size: 18px;
-        margin: 0;
-        color: #333;
-        flex-shrink: 0;
-      }
-
-      .header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        user-select: none;
-      }
-
-      .text-btn {
-        background: none;
-        border: none;
-        color: #007bff;
-        font-size: 14px;
-        cursor: pointer;
-      }
-
-      .row {
-        display: flex;
-        justify-content: space-between;
-        gap: 6px;
-      }
-
-      select, input[type="text"], textarea {
-        padding: 8px;
-        font-size: 14px;
-        border: 1px solid #ddd;
-        border-radius: 8px;
-        background-color: #fff;
-        box-sizing: border-box; /* Prevents overflow */
-      }
-
-      #backend-select {
-        flex-grow: 1;
-        max-width: 30%;
-      }
-
-      #target-language {
-        flex-grow: 1;
-      }
-
-      #language-select {
-        flex-grow: 1;
-        width: 60%;
-      }
-
-      .text-area-container {
-        display: flex;
-        flex-direction: column;
-        flex-grow: 1;
-        gap: 6px;
-      }
-
-      textarea {
-        font-family: Arial, Helvetica, sans-serif;
-        width: 100%;
-        resize: vertical;
-        height: 96px;
-        min-height: 48px;
-        max-height: 256px;
-      }
-
-      textarea.error {
-        color: red;
-      }
-
-      .hidden {
-        display: none;
-      }
-
-      .group {
-        display: flex;
-        flex-direction: column;
-        gap: 6px;
-        padding: 8px;
-        border: 1px solid #ddd;
-        border-radius: 8px;
-        background-color: #fff;
-        font-size: 14px;
-        color: #333;
-        box-sizing: border-box;
-      }
-
-      .checkbox-group {
-        display: flex;
-        align-items: center;
-        gap: 8px;
-        padding: 8px;
-        border: 1px solid #ddd;
-        border-radius: 8px;
-        background-color: #fff;
-        font-size: 14px;
-        color: #333;
-        box-sizing: border-box;
-      }
-
-      .checkbox-group input[type="checkbox"] {
-        width: 18px;
-        height: 18px;
-      }
-
-      .group input[type="text"],
-      .group input[type="password"] {
-        padding: 8px;
-        font-size: 14px;
-        border: 1px solid #ddd;
-        border-radius: 8px;
-        background-color: #fff;
-        box-sizing: border-box;
-        width: 100%;
-      }
-
-      .group label {
-        user-select: none;
-      }
-
-      .group div {
-        font-size: 14px;
-        font-weight: bold;
-        margin-bottom: 6px;
-      }
-
-      .input-group {
-        display: flex;
-        align-items: center;
-        flex-grow: 1;
-      }
-
-      .square-btn {
-        width: 32px; /* 固定寬度為正方形 */
-        height: 32px;
-        border: 1px solid #ddd;
-        border-radius: 8px;
-        background-color: #fff;
-        cursor: pointer;
-        flex-shrink: 0; /* 防止按鈕被擠壓 */
-        margin-left: 6px; /* 與輸入欄間距 */
-      }
-
-      .square-btn:hover {
-        background-color: #f0f0f0;
-      }
-
-      .square-btn:active {
-        background-color: #e8e8e8;
-      }
-
-      .input-group input[type="text"] {
-        flex-grow: 1;
-        width: 70%;
-      }
-    </style>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="assets/css/font.css">
+    <link rel="stylesheet" href="assets/css/popup.css">
   </head>
   <body>
-    <div id="page1" class="page">
+    <div id="page1" class="page font-vazir">
       <div class="header">
-        <h2>Translate</h2>
-        <button id="settings-btn" class="text-btn">Settings</button>
+        <h2>
+          مترجم هوش مصنوعی محلی
+        </h2>
+        <button id="settings-btn" class="text-btn">تنظیمات</button>
       </div>
 
       <div class="row">
@@ -203,24 +30,25 @@
       </div>
 
       <div class="text-area-container">
-        <textarea id="source-text" placeholder="Original text"></textarea>
+        <textarea id="source-text" class="font-vazir" dir="ltr" placeholder="متن اصلی"></textarea>
         <textarea
           id="translated-text"
           disabled
-          placeholder="Translated text"
+          class="font-vazir"
+          placeholder="متن ترجمه شده"
         ></textarea>
       </div>
     </div>
 
     <div id="page2" class="page hidden">
       <div class="header">
-        <h2>Settings</h2>
-        <button id="translate-btn" class="text-btn">Translate</button>
+        <h2>تنظیمات</h2>
+        <button id="translate-btn" class="text-btn">ترجمه</button>
       </div>
 
       <div class="checkbox-group">
         <input type="checkbox" id="enable-tooltip" />
-        <label for="enable-tooltip">Enable tooltip</label>
+        <label for="enable-tooltip">فعال سازی تولتیپ</label>
       </div>
     </div>
 
