translating and removeing debug codes.

--- a/popup.html
+++ b/popup.html
@@ -22,7 +22,9 @@
           <input
             type="text"
             id="target-language"
-            placeholder="Enter target language"
+            class="font-vazir"
+            dir="ltr"
+            placeholder="زبان هدف را وارد کنید."
           />
           <select id="language-select" class="hidden"></select>
           <button id="language-menu" class="square-btn" type="button">&#x1F30F;</button>
